--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "mongoose": "^8.12.1",
+    "my-app": "file:",
     "next": "15.2.1",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
