--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
+    "mongodb": "^6.15.0",
     "mongoose": "^8.12.1",
     "my-app": "file:",
     "next": "15.2.1",
