--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
+    "date-fns": "^4.1.0",
     "mongodb": "^6.15.0",
     "mongoose": "^8.12.1",
     "my-app": "file:",
